Added the sixth audio file

--- a/index.html
+++ b/index.html
@@ -579,6 +579,24 @@
                             the audio element.
                         </audio>
                     </div>
+                    
+                    <div class="audio-container">
+                        <h3>Letting Go Requires Change<br><br></h3>
+
+                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
+                            style="width: 150px; height: auto;">
+                        <!--
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
+                            luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
+                        </p>
+                        -->
+                        <audio controls style="width: 100%;">
+                            <source src="./resources/media/audio/letting-go-requires-change.mp3" type="audio/mpeg">
+                            Your browser does not support
+                            the audio element.
+                        </audio>
+                    </div>
 
                     <div class="audio-container">
                         <h3>Maintaining a Spirit of Thanks<br><br></h3>
@@ -616,23 +634,6 @@
                         </audio>
                     </div>
 
-                    <div class="audio-container">
-                        <h3>Forgiveness – Letting Go of Grudges</h3>
-
-                        <img src="./resources/media/images/vintage-radio-microphone-with-background-removed.png" alt="A microphone"
-                            style="width: 150px; height: auto;">
-                        <!--
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
-                            luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
-                        </p>
-                        -->
-                        <audio controls style="width: 100%;">
-                            <source src="./resources/media/audio/15-minute-mental-health-moment-June-16-2018.mp3" type="audio/mpeg">
-                            Your browser does not support
-                            the audio element.
-                        </audio>
-                    </div>
                 </div>
             </div>
 
