Fixed the hyperlink to the radio station

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     Blocker Adams radio program, “Straight Talk on Relationships.” She was a contributing author to
                     a local magazine, CSRA MD News and MD Journal. In November of 2017, Dr. Davis began a radio
                     program “Your 15-minute Mental Health Moment” on
-                    <a href="http://wkzk.radio.net/" target="_Blank">
+                    <a href="https://wkzk.net/" target="_Blank">
                         WKZK Radio (103.7</a> in Augusta. On this program, she educates the public about interesting
                     mental health topics.
                 </p>
@@ -517,7 +517,7 @@
                 <p>
                     In November of 2017, Dr. Davis began a weekly radio program on which she discusses a variety of
                     topics related to understanding and maintaining your mental or psychological health. Her program
-                    was broadcast on <a href="http://wkzk.radio.net/" target="_Blank">WKZK Radio</a> in Augusta every
+                    was broadcast on <a href="https://wkzk.net/" target="_Blank">WKZK Radio</a> in Augusta every
                     Saturday morning. Professional obligations required
                     that she suspend her broadcast during the summer but she intends to resume it in January of 2019.
                     You can listen to some of her broadcasts below. If you have any suggestions about other topics you
