--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     a local magazine, CSRA MD News and MD Journal. In November of 2017, Dr. Davis began a radio
                     program “Your 15-minute Mental Health Moment” on
                     <a href="https://wkzk.net/" target="_Blank">
-                        WKZK Radio (103.7</a> in Augusta. On this program, she educates the public about interesting
+                        WKZK Radio (103.7)</a> in Augusta. On this program, she educates the public about interesting
                     mental health topics.
                 </p>
                 <p>
