Modified the real-time clock in the footer to display 12 hour time instead of 24 hour time

--- a/index.html
+++ b/index.html
@@ -903,6 +903,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2015702/datetime.js"></script>
+    <script src="./resources/scripts/mydatetime.js"></script>
     <script src="./resources/scripts/browserdetect.js"></script>
 
     <script>
