Removed extraneous assets
Removed unused assets and changed the name of the "Mental-Health Moment" tab to "Dr. Davis on Air."

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     Services</button>
                 <button class="tablink" onclick="openPage('YourMentalHealth', this, 'White', '#8c2633')">Your Mental
                     Health</button>
-                <button class="tablink" onclick="openPage('RadioShow', this, 'White', '#8c2633')">Mental Health Moment</button>
+                <button class="tablink" onclick="openPage('RadioShow', this, 'White', '#8c2633')">Dr. Davis<br>on Air</button>
                 <button class="tablink" onclick="openPage('YouthMentalHealth', this, 'White', '#8c2633')">Youth Mental
                     Health</button>
                 <button class="tablink" onclick="openPage('Testimonials', this, 'White', '#8c2633')">Client
@@ -902,8 +902,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2015702/datetime.js"></script>
-    <script src="./resources/scripts/mydatetime.js"></script>
+    <script src="./resources/scripts/datetime.js"></script>
     <script src="./resources/scripts/browserdetect.js"></script>
 
     <script>
