Modified the "Dr. Davis on Air" tab

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     Services</button>
                 <button class="tablink" onclick="openPage('YourMentalHealth', this, 'White', '#8c2633')">Your Mental
                     Health</button>
-                <button class="tablink" onclick="openPage('RadioShow', this, 'White', '#8c2633')">Dr. Davis<br>on Air</button>
+                <button class="tablink" onclick="openPage('RadioShow', this, 'White', '#8c2633')">Dr. Davis<br>On Air</button>
                 <button class="tablink" onclick="openPage('YouthMentalHealth', this, 'White', '#8c2633')">Youth Mental
                     Health</button>
                 <button class="tablink" onclick="openPage('Testimonials', this, 'White', '#8c2633')">Client
