Added vendor prefixes and removed reference to small slideshow
This configuration constitutes the production version.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Adrienne C Davis, PhD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style-dist.css" />
     <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
 </head>
 
@@ -61,7 +61,6 @@
                         <source src="./resources/media/video/slideshow.mp4" type="video/mp4">
                         <source src="./resources/media/video/slideshow.webm" type="video/webm">
                         <source src="./resources/media/video/slideshow.ogv" type="video/ogg">
-                        <source src="./resources/media/video/small-slideshow.mp4" type="video/mp4">
                         Your user agent does not support the HTML 5 video element
                     </video>
 
