Modified the date and time display in the footer
I modified the information in the date and time display and centered it in the footer.

--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
             <a href="mailto:edgar.cole@san.rr.com">
                 <h2>&copy; 2018 Edgar M Cole, Jr.</h2>
             </a>
-            <h2 id="date_time">Clock</h2>
+            <h2 id="date_time" style="padding-right: 80px;">Clock</h2>
             <!--Start of CuterCounter Code -->
             <div style="display: flex; margin-right: 2rem;">
                 <h2>Visitors:</h2>
