--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                         <source src="./resources/media/video/slideshow.mp4" type="video/mp4">
                         <source src="./resources/media/video/slideshow.webm" type="video/webm">
                         <source src="./resources/media/video/slideshow.ogv" type="video/ogg">
+                            <source src="./resources/media/video/small-slideshow.mp4" type="video/mp4">
                         Your user agent does not support the HTML 5 video element
                     </video>
 
