--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
             <!--Start of CuterCounter Code -->
             <div style="display: flex; margin-right: 2rem;">
                 <h2>Visitors:</h2>
-                <img src="http://www.cutercounter.com/hit.php?id=guaapqq&nd=6&style=26" border="0" alt="Visitor Counter">
+                <img src="http://www.cutercounter.com/hit.php?id=guaapqq&nd=6&style=26" alt="Visitor Counter">
             </div>
             <!--End of CuterCounter Code-->
         </footer>
