I modified the code so that the copyright year is obtained dynamically

--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
 
         <footer id="calendar-clock" class="clock-container flex-container" style="justify-content: space-between; align-items: center;">
             <a href="mailto:edgar.cole@san.rr.com">
-                <h2>&copy; 2018 Edgar M Cole, Jr.</h2>
+                <h2 id="copyright"></h2>
             </a>
             <h2 id="date_time" style="padding-right: 90px;">Clock</h2>
             <!--Start of CuterCounter Code -->
@@ -998,6 +998,7 @@
     <script src="./resources/scripts/datetime.js"></script>
     <script src="./resources/scripts/browserdetect.js"></script>
     <script src="./resources/scripts/audioenhancements.js"></script>
+    <script src="./resources/scripts/copyright.js"></script>
 
     <script>
         window.onload = date_time('date_time');
