Added two new audio files to the "On Air" page

--- a/index.html
+++ b/index.html
@@ -724,6 +724,45 @@
                         </audio>
                     </div>
 
+                    <div id="audio-container-11" class="audio-container">
+                        <h3 id="title-11">Emotional Intimacy<br><br></h3>
+
+                        <img id="icon-11" src="./resources/media/images/vintage-radio-microphone-with-background-removed.png"
+                            alt="A microphone" style="width: 150px; height: auto;">
+                        <!--
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
+                                luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
+                            </p>
+                            -->
+                        <audio controls style="width: 100%;" onplay="toggleBackground('audio-container-11', 'title-11', 'icon-11')"
+                            onpause="pauseAudio('audio-container-11', 'title-11', 'icon-11')" onended="endAudio('audio-container-11', 'title-11', 'icon-11')">
+                            <source src="./resources/media/audio/emotional-intimacy.mp3" type="audio/mpeg">
+                            <source src="./resources/media/audio/emotional-intimacy.oga" type="audio/ogg">
+                            Your browser does not support
+                            the audio element.
+                        </audio>
+                    </div>
+
+                    <div id="audio-container-12" class="audio-container">
+                        <h3 id="title-12">The Challenge of Forgiveness<br><br></h3>
+
+                        <img id="icon-12" src="./resources/media/images/vintage-radio-microphone-with-background-removed.png"
+                            alt="A microphone" style="width: 150px; height: auto;">
+                        <!--
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut purus et erat fringilla
+                                luctus. Aenean imperdiet tellus massa, eleifend feugiat neque rutrum quis.
+                            </p>
+                            -->
+                        <audio controls style="width: 100%;" onplay="toggleBackground('audio-container-12', 'title-12', 'icon-12')"
+                            onpause="pauseAudio('audio-container-12', 'title-12', 'icon-12')" onended="endAudio('audio-container-12', 'title-12', 'icon-12')">
+                            <source src="./resources/media/audio/the-challenge-of-forgiveness.mp3" type="audio/mpeg">
+                            <source src="./resources/media/audio/the-challenge-of-forgiveness.oga" type="audio/ogg">
+                            Your browser does not support
+                            the audio element.
+                        </audio>
+                    </div>
 
                 </div>
 
@@ -982,7 +1021,7 @@
 
         <footer id="calendar-clock" class="clock-container flex-container" style="justify-content: space-between; align-items: center;">
             <a href="mailto:edgar.cole@san.rr.com">
-                <h2 id="copyright"></h2>
+                <h2 id="copyright">copyright notice</h2>
             </a>
             <h2 id="date_time" style="padding-right: 90px;">Clock</h2>
             <!--Start of CuterCounter Code -->
