Changed MPMA URL

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     Dr. Davis is a member of the Columbia County Chamber of Commerce. She is a member of Oakey
                     Grove Baptist Church in Evans, GA. An avid tennis player, Dr. Davis is active in the USTA Adult
                     Tennis Leagues. She is a member of the Atlanta Chapter of the <a
-                        href="http://www.montfordpointmarines.org/" target="_blank">Montford Point Marines</a>
+                        href="http://www.atl-mpma.org/" target="_blank">Montford Point Marines</a>
                     Association Ladies Auxiliary in honor of her late father, an original Montford Point Marine,
                     who were awarded the Congressional Gold Medal in 2012 for their WWII service, courage and
                     commitment to fighting a war abroad and at home.
