I'm not sure what's wrong!

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                         Psychology</span></h1>
                             </div>
                             <img class="primary-photo"
-                                src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
+                                src="./resources/media/images/Dr-Adrienne-Davis-website-photo-updated-cropped.jpg"
                                 alt="Dr. Adrienne Davis" />
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                             <div>
                                 <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
                                 <img class="secondary-photo"
-                                    src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
+                                    src="./resources/media/images/Dr-Adrienne-Davis-website-photo-updated-cropped.jpg"
                                     alt="Dr. Adrienne Davis" />
                             </div>
                         </div>
@@ -180,8 +180,8 @@
                 <p>
                     Dr. Davis is a member of the Columbia County Chamber of Commerce. She is a member of Oakey
                     Grove Baptist Church in Evans, GA. An avid tennis player, Dr. Davis is active in the USTA Adult
-                    Tennis Leagues. She is a member of the Atlanta Chapter of the <a
-                        href="http://www.atl-mpma.org/" target="_blank">Montford Point Marines</a>
+                    Tennis Leagues. She is a member of the Atlanta Chapter of the <a href="http://www.atl-mpma.org/"
+                        target="_blank">Montford Point Marines</a>
                     Association Ladies Auxiliary in honor of her late father, an original Montford Point Marine,
                     who were awarded the Congressional Gold Medal in 2012 for their WWII service, courage and
                     commitment to fighting a war abroad and at home.
@@ -199,7 +199,7 @@
                                 <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
 
                                 <img class="secondary-photo"
-                                    src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
+                                    src="./resources/media/images/Dr-Adrienne-Davis-website-photo-updated-cropped.jpg"
                                     alt="Dr. Adrienne Davis" />
 
                             </div>
@@ -215,7 +215,8 @@
                     <span>&ast;&ast;
                         Seek Understanding, Be Open to Change, Focus
                         on
-                        Solutions &ast;&ast; </span></h1>
+                        Solutions &ast;&ast; </span>
+                </h1>
 
                 <div style="display: flex; margin-top: 40px;">
                     <div id="psychotherapy" style="padding: 1rem;">
@@ -403,11 +404,11 @@
                         <div class="inner" style="background-color: #8C2633;">
                             <div>
                                 <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
-
+                                <!--
                                 <img class="secondary-photo"
-                                    src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
+                                    src="./resources/media/images/Dr-Adrienne-Davis-website-photo-updated-cropped.jpg"
                                     alt="Dr. Adrienne Davis" />
-
+-->
                             </div>
                         </div>
                     </div>
@@ -522,11 +523,11 @@
                         <div class="inner" style="background-color: #8C2633;">
                             <div>
                                 <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
-
+                                <!--
                                 <img class="secondary-photo"
-                                    src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
+                                    src="./resources/media/images/Dr-Adrienne-Davis-website-photo-updated-cropped.jpg"
                                     alt="Dr. Adrienne Davis" />
-
+-->
                             </div>
                         </div>
                     </div>
@@ -542,7 +543,7 @@
                     that she suspend her broadcast during the summer but she intends to resume it in January of 2019.
                     You can listen to some of her broadcasts below. If you have any suggestions about other topics you
                     would like to hear her discuss, please email her at
-                    <a href="mailto:dradriennedavis@gmail.com">dradriennedavis@gmail.com</a>
+                    <a href="mailto:drdavisconsulting54@gmail.com">drdavisconsulting54@gmail.com</a>
                 </p>
 
                 <div style="display: flex; flex-wrap: wrap; justify-content: space-around; margin: 0 auto;">
@@ -913,11 +914,11 @@
                         <div class="inner" style="background-color: #8C2633;">
                             <div>
                                 <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
-
+                                <!--
                                 <img class="secondary-photo"
                                     src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                                     alt="Dr. Adrienne Davis" />
-
+-->
                             </div>
                         </div>
                     </div>
@@ -1061,11 +1062,11 @@
                         <div class="inner" style="background-color: #8C2633;">
                             <div>
                                 <h1 style="font-size: 3rem;"><span>Adrienne C. Davis, Ph.D. ABPP</span></h1>
-
+                                <!--
                                 <img class="secondary-photo"
                                     src="./resources/media/images/Dr-Adrienne-Davis-website-photo.jpg"
                                     alt="Dr. Adrienne Davis" />
-
+-->
                             </div>
                         </div>
                     </div>
