Updated contact page

--- a/index.html
+++ b/index.html
@@ -1100,13 +1100,12 @@
                     <p>
                         Department of Children & Family Services <strong>(877) 423-4746</strong><br>
                         National Institute of Mental Health: <strong>(866) 615-6464</strong><br>
-                        General Emergency Dial <strong>9-1-1</strong><br>
+                        National Mental Health Hotline <strong>9-8-8</strong><br>
                     </p>
                 </div>
             </div>
 
         </section>
-
 
         <footer id="calendar-clock" class="clock-container flex-container"
             style="justify-content: space-between; align-items: center;">
