--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/style-dist.css" />
-    <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon">
+    <link rel="icon" href="./ms-icon-310x310.png" type="image/x-icon"/>
 </head>
 
 <body>
@@ -1100,7 +1100,7 @@
                     <p>
                         Department of Children & Family Services <strong>(877) 423-4746</strong><br>
                         National Institute of Mental Health: <strong>(866) 615-6464</strong><br>
-                        National Mental Health Hotline <strong>9-8-8</strong><br>
+                        National Mental Health Hotline <strong>9-8-8</strong>
                     </p>
                 </div>
             </div>
